--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,11 +19,11 @@
     <string name="note_shown_widget">Note affichée dans le widget:</string>
     <string name="new_note_type">Type de la note:</string>
     <string name="text_note">Texte</string>
-    <string name="lock_note">Lock note</string>
-    <string name="unlock_note">Unlock note</string>
-    <string name="note_content_locked">The notes\' content is locked.</string>
-    <string name="show_content">Show content</string>
-    <string name="locking_warning">WARNING: If you forget the notes\' password, you won\'t be able to recover it or access the notes\' content anymore.</string>
+    <string name="lock_note">Verrouiller la note</string>
+    <string name="unlock_note">Déverrouiller note</string>
+    <string name="note_content_locked">Le contenu de la note est verrouillé.</string>
+    <string name="show_content">Montrer le contenu</string>
+    <string name="locking_warning">ATTENTION: Si vous oubliez le mot de passe, vous ne serez pas en mesure de la récupérer ou d'y accéder.</string>
 
     <!-- File notes -->
     <string name="open_file">Ouvrir le fichier</string>
@@ -60,7 +60,7 @@
     <string name="add_new_checklist_item">Ajouter un nouvel élément</string>
     <string name="add_new_checklist_items">Ajouter de nouveaux éléments</string>
     <string name="checklist_is_empty">La checklist est vide</string>
-    <string name="remove_done_items">Remove done items</string>
+    <string name="remove_done_items">Supprimer les items cochés</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exporter toutes les notes en tant que fichiers</string>
