--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">启用行折叠</string>
     <string name="use_incognito_mode">对于键盘使用隐私模式</string>
     <string name="move_done_checklist_items">移动未完成的清单至顶端</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">清单</string>
