--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">تفعيل التفاف الخط</string>
     <string name="use_incognito_mode">استخدام وضع التصفح المتخفي للوحات المفاتيح</string>
     <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">قائمة تدقيق</string>
