--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">Ενεργοποίηση αναδίπλωσης γραμμής</string>
     <string name="use_incognito_mode">Χρήση λειτουργίας Incognito πληκτρολόγιου</string>
     <string name="move_done_checklist_items">Μετακίνηση ανεπιτυχών λίστας ελέγχου στο επάνω μέρος</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Λίστα ελέγχου</string>
