--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">Ota käyttöön automaattinen rivitys</string>
     <string name="use_incognito_mode">Käytä näppäimistöjen Incognito-tilaa</string>
     <string name="move_done_checklist_items">Siirrä tekemättömät kohdat muistilistasta ylimmäksi</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Muistilista</string>
