--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">Habilitar sangrado de liña</string>
     <string name="use_incognito_mode">Usar o modo incógnito dos teclados</string>
     <string name="move_done_checklist_items"> Mover os elementos dunha lista de verificación non rematada a arriba</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Lista de verificación</string>
