--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">Sözcük kaydırmayı etkinleştir</string>
     <string name="use_incognito_mode">Klavyelerin Gizli modunu kullan</string>
     <string name="move_done_checklist_items">Tamamlanmamış yapılacak listesi öğelerini en üste taşı</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Yapılacak listesi</string>
