--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">Продовжувати друк з нового рядка</string>
     <string name="use_incognito_mode">Використовувати режим Приватності в клавіатурі</string>
     <string name="move_done_checklist_items">Поміщати вкінець виконані позиції у списку</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Список</string>
