--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -54,6 +54,7 @@
     <string name="enable_line_wrap">自動換行</string>
     <string name="use_incognito_mode">使用無痕模式的鍵盤</string>
     <string name="move_done_checklist_items">將未完成的核對清單項目移動至頂端</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">核對清單</string>
