--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -58,6 +58,7 @@
 
     <!-- Checklists -->
     <string name="checklist">Λίστα ελέγχου</string>
+    <string name="checklists">Checklists</string>
     <string name="add_new_checklist_item">Προσθήκη νέου στοιχείου λίστας ελέγχου</string>
     <string name="add_new_checklist_items">Προσθήκη νέων στοιχείων λίστας ελέγχου</string>
     <string name="checklist_is_empty">Η λίστα ελέγχου είναι κενή</string>
