--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -63,6 +63,9 @@
     <string name="add_new_checklist_items">افزودن موارد به فهرست نشان‌دار</string>
     <string name="checklist_is_empty">فهرست نشان‌دار خالی است</string>
     <string name="remove_done_items">پاک کردن موارد انجام شده</string>
+    <string name="sort_direction">Sort direction</string>
+    <string name="sort_separate_done_from_undone">Separate done items from undone items</string>
+    <string name="sort_checklist">Sort checklist</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">برون‌ریزی همه یادداشت‌ها به عنوان پرونده</string>
