--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -63,6 +63,9 @@
     <string name="add_new_checklist_items">Ajouter de nouveaux éléments</string>
     <string name="checklist_is_empty">La checklist est vide</string>
     <string name="remove_done_items">Supprimer les items cochés</string>
+    <string name="sort_direction">Sort direction</string>
+    <string name="sort_separate_done_from_undone">Separate done items from undone items</string>
+    <string name="sort_checklist">Sort checklist</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exporter toutes les notes en tant que fichiers</string>
