--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -63,6 +63,9 @@
     <string name="add_new_checklist_items">Yeni yapılacak listesi öğeleri ekle</string>
     <string name="checklist_is_empty">Yapılacak listesi boş</string>
     <string name="remove_done_items">Tamamlanan öğeleri kaldır</string>
+    <string name="sort_direction">Sort direction</string>
+    <string name="sort_separate_done_from_undone">Separate done items from undone items</string>
+    <string name="sort_checklist">Sort checklist</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Tüm notları dosya olarak dışa aktar</string>
