--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -63,6 +63,9 @@
     <string name="add_new_checklist_items">Додати нові позиції у списку</string>
     <string name="checklist_is_empty">Список порожній</string>
     <string name="remove_done_items">Вилучати виконані позиції</string>
+    <string name="sort_direction">Sort direction</string>
+    <string name="sort_separate_done_from_undone">Separate done items from undone items</string>
+    <string name="sort_checklist">Sort checklist</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Експортувати всі нотатки як файли</string>
